--- a/index.html
+++ b/index.html
@@ -13,146 +13,162 @@
 
 <body>
 
-    <div class="bg"></div>
-    <div class="splashTextContainer">
+<div class="bg"></div>
+<div class="splashTextContainer">
         <span class="splashFont">BEACH
             <br>LAUNCH</span>
+    <br>
+    <span class="subTitle">The best launch team ever.</span>
+</div>
+<a href="#features-list">
+    <div id="banner-scroll-arrow"></div>
+</a>
+
+<header>
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input type="checkbox"/>
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>About Us</li>
+                </a>
+                <a href="#">
+                    <li>Info</li>
+                </a>
+                <a href="contact.html">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<main>
+    <div id="features-list">
+        <h2>We are the Beach Launch Team</h2>
+        <p>Beach Launch Team is a university student group at Cal State Long Beach dedicated to designing, building,
+            testing,
+            and launching liquid fuel rockets.</p>
+
+        <div class="feature">
+            <img alt="" src="image/rocket.svg" height="100" width="100"/>
+            <p>Dignissimos ex quae quia. Hic vitae exercitationem consequatur sapiente odit sed ducimus eligendi.</p>
+        </div>
+
+        <div class="feature">
+            <img alt="" src="image/settings.svg" height="100" width="100"/>
+            <p>Inventore reprehenderit quidem sit illum molestiae consequatur voluptatum rerum.</p>
+        </div>
+
+        <div class="feature">
+            <img alt="" src="image/flag.svg" height="100" width="100"/>
+            <p>Error qui dolore earum facilis mollitia animi rerum minus. Distinctio et illo tenetur cumque enim ea
+                est.</p>
+        </div>
+
+
+        <button onclick="window.location.href='team.php'" class="button">Learn More</button>
+
+
+    </div>
+</main>
+
+<div class="full-span-feature feature-one"></div>
+
+<main>
+
+    <div class="launch-history clearfix">
         <br>
-        <span class="subTitle">The best launch team ever.</span>
-    </div>
-    <a href="#features-list"><div id="banner-scroll-arrow"></div></a>
+        <h2>History</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci.
+            Vivamus
+            pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales
+            lacus.</p>
 
-    <header>
-        <nav role="navigation">
-            <div id="menuToggle">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul id="menu">
-                    <a href="#">
-                        <li>Home</li>
-                    </a>
-                    <a href="#">
-                        <li>About Us</li>
-                    </a>
-                    <a href="#">
-                        <li>Info</li>
-                    </a>
-                    <a href="contact.html">
-                        <li>Contact</li>
-                    </a>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <div id="features-list">
-            <h2>We are the Beach Launch Team</h2>
-            <p>Beach Launch Team is a university student group at Cal State Long Beach dedicated to designing, building, testing,
-                and launching liquid fuel rockets.</p>
-
-            <div class="feature">
-                <img alt="" src="image/rocket.svg" height="100" width="100" />
-                <p>Dignissimos ex quae quia. Hic vitae exercitationem consequatur sapiente odit sed ducimus eligendi.</p>
-            </div>
-
-            <div class="feature">
-                <img alt="" src="image/settings.svg" height="100" width="100" />
-                <p>Inventore reprehenderit quidem sit illum molestiae consequatur voluptatum rerum.</p>
-            </div>
-
-            <div class="feature">
-                <img alt="" src="image/flag.svg" height="100" width="100" />
-                <p>Error qui dolore earum facilis mollitia animi rerum minus. Distinctio et illo tenetur cumque enim ea est.</p>
-            </div>
-
-
-            <button onclick="window.location.href='team.php'" class="button">Learn More</button>
-
-
+        <span class="bullet">&#149;</span>
+        <div class="history-item">
+            <span class="date">1999</span>
+            <p>This is a paragraph of text describing the event. I will come back and put real information here, I
+                promise.</p>
         </div>
-    </main>
 
-    <div style=" margin: 2em 0 2em 0; height: 50vh; background-color: #2E6359"></div>
-
-    <main>
-
-        <div class="launch-history clearfix">
-            <br>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus
-                pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales
-                lacus.</p>
-
-            <span class="bullet">&#149;</span>
-            <div class="history-item">
-                <span class="date">1999</span>
-                <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
-            </div>
-
-            <span class="bullet">&#149;</span>
-            <div class="history-item">
-                <span class="date">1999</span>
-                <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
-            </div>
-
-            <span class="bullet">&#149;</span>
-            <div class="history-item">
-                <span class="date">1999</span>
-                <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
-            </div>
-
-            <span class="bullet">&#149;</span>
-            <div class="history-item">
-                <span class="date">1999</span>
-                <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
-            </div>
-
-            <span class="bullet">&#149;</span>
-            <div class="history-item">
-                <span class="date">1999</span>
-                <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
-            </div>
-
+        <span class="bullet">&#149;</span>
+        <div class="history-item">
+            <span class="date">1999</span>
+            <p>This is a paragraph of text describing the event. I will come back and put real information here, I
+                promise.</p>
         </div>
-        <h2>Help us reach the next milestone!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra
-            maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
-        <a href="#">
-            <button class="button">Donate Today</button>
-        </a>
-    </main>
-    <footer>
-        <p>
-            <em>
-                <!--#echo var="LAST_MODIFIED"-->
-            </em>
-        </p>
-        <h3>Web Developers</h3>
 
-           <span class="author" title="013756039">Isaac Chavez, </span>
+        <span class="bullet">&#149;</span>
+        <div class="history-item">
+            <span class="date">1999</span>
+            <p>This is a paragraph of text describing the event. I will come back and put real information here, I
+                promise.</p>
+        </div>
 
-            <span class="author" title="013340442">Ahmed Hamed, </span>
+        <span class="bullet">&#149;</span>
+        <div class="history-item">
+            <span class="date">1999</span>
+            <p>This is a paragraph of text describing the event. I will come back and put real information here, I
+                promise.</p>
+        </div>
 
-            <span class="author" title="013340442">Raviraj Mane, </span>
-
-            <span class="author" title="013340442">Aman Mehta, </span>
-
-            <span class="author" title="013101593">Juan David Lopez</span>
-
-        <h3>Attribution</h3>
-            <div>
-                <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
-                <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-                <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
-                    target="_blank">CC 3.0 BY</a>
-            </div>
-
-    </footer>
+        <span class="bullet">&#149;</span>
+        <div class="history-item">
+            <span class="date">1999</span>
+            <p>This is a paragraph of text describing the event. I will come back and put real information here, I
+                promise.</p>
+        </div>
     </div>
-    <script src="js/logic.js" type="text/javascript"></script>
+</main>
+
+<div class="full-span-feature feature-two"></div>
+
+<main>
+
+    <h2>Help us reach the next milestone!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus
+        pharetra
+        maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
+    <a href="#">
+        <button class="button">Donate Today</button>
+    </a>
+</main>
+<footer>
+    <p>
+        <em>
+            <!--#echo var="LAST_MODIFIED"-->
+        </em>
+    </p>
+    <h3>Web Developers</h3>
+
+    <span class="author" title="013756039">Isaac Chavez, </span>
+
+    <span class="author" title="013340442">Ahmed Hamed, </span>
+
+    <span class="author" title="013340442">Raviraj Mane, </span>
+
+    <span class="author" title="013340442">Aman Mehta, </span>
+
+    <span class="author" title="013101593">Juan David Lopez</span>
+
+    <h3>Attribution</h3>
+    <div>
+        <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
+        <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
+           target="_blank">CC 3.0 BY</a>
+    </div>
+
+</footer>
+</div>
+<script src="js/logic.js" type="text/javascript"></script>
 </body>
 
 </html>
